// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toBeOK > fails when Response is not defined in the global scope 1`] = `
<d>expect(</b><r>received</g><d>).</b>toBeOK<d>()</b>

<b>Matcher error</b>: Response is not defined in the global scope.
`;

exports[`toBeOK > fails when the received value is not a Response 1`] = `
<d>expect(</b><r>received</g><d>).</b>toBeOK<d>()</b>

<b>Matcher error</b>: Received value is not a Response.
`;

exports[`toBeOK > fails when the response is not ok 1`] = `
<d>expect(</b><r>response</g><d>).</b>toBeOK<d>()</b>

Expected response to be ok, but it was not ok.
`;

exports[`toBeOK > passes when the response is ok 1`] = `
<d>expect(</b><r>response</g><d>).</b>not<d>.</b>toBeOK<d>()</b>

Expected response to be not ok, but it was ok.
`;

exports[`toHaveBodyJSON > fails when the body has already been used > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Cannot read body JSON because it has already been used.
`;

exports[`toHaveBodyJSON > fails when the body has already been used > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Cannot read body JSON because it has already been used.
`;

exports[`toHaveBodyJSON > fails when the received value is not a Response or Request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Received value is not a Request or Response.
`;

exports[`toHaveBodyJSON > fails when the response/request does not have the expected JSON body > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<g>- Expected  - 1</g>
<r>+ Received  + 1</g>

<d>  Object {</b>
<g>-   "message": "Hello, world!",</g>
<r>+   "message": "Goodbye, world!",</g>
<d>  }</b>
`;

exports[`toHaveBodyJSON > fails when the response/request does not have the expected JSON body > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<g>- Expected  - 1</g>
<r>+ Received  + 1</g>

<d>  Object {</b>
<g>-   "message": "Hello, world!",</g>
<r>+   "message": "Goodbye, world!",</g>
<d>  }</b>
`;

exports[`toHaveBodyJSON > passes when the response/request has the expected JSON body > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>not<d>.</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

Expected request not to have body JSON <g>[object Object]</g>, but it did.
`;

exports[`toHaveBodyJSON > passes when the response/request has the expected JSON body > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>not<d>.</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

Expected response not to have body JSON <g>[object Object]</g>, but it did.
`;

exports[`toHaveBodyJSON > when Request is not defined in the global scope > fails > request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Request or Response is not defined in the global scope.
`;

exports[`toHaveBodyJSON > when Response is not defined in the global scope > fails > response 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyJSON<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Request or Response is not defined in the global scope.
`;

exports[`toHaveBodyJSONStrict > fails when the body has already been used > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Cannot read body JSON because it has already been used.
`;

exports[`toHaveBodyJSONStrict > fails when the body has already been used > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Cannot read body JSON because it has already been used.
`;

exports[`toHaveBodyJSONStrict > fails when the received value is not a Response or Request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Received value is not a Request or Response.
`;

exports[`toHaveBodyJSONStrict > fails when the response/request does not have the expected JSON body > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<g>- Expected  - 1</g>
<r>+ Received  + 1</g>

<d>  Object {</b>
<g>-   "message": "Hello, world!",</g>
<r>+   "message": "Goodbye, world!",</g>
<d>  }</b>
`;

exports[`toHaveBodyJSONStrict > fails when the response/request does not have the expected JSON body > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<g>- Expected  - 1</g>
<r>+ Received  + 1</g>

<d>  Object {</b>
<g>-   "message": "Hello, world!",</g>
<r>+   "message": "Goodbye, world!",</g>
<d>  }</b>
`;

exports[`toHaveBodyJSONStrict > passes when the response/request has the expected JSON body > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>not<d>.</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

Expected request not to have body JSON <g>[object Object]</g>, but it did.
`;

exports[`toHaveBodyJSONStrict > passes when the response/request has the expected JSON body > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>not<d>.</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

Expected response not to have body JSON <g>[object Object]</g>, but it did.
`;

exports[`toHaveBodyJSONStrict > when Request is not defined in the global scope > fails > request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Request or Response is not defined in the global scope.
`;

exports[`toHaveBodyJSONStrict > when Response is not defined in the global scope > fails > response 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyJSONStrict<d>(</b><g>{"message": "Hello, world!"}</g><d>)</b>

<b>Matcher error</b>: Request or Response is not defined in the global scope.
`;

exports[`toHaveBodyText > fails when the body has already been used > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

<b>Matcher error</b>: Cannot read body text because it has already been used.
`;

exports[`toHaveBodyText > fails when the body has already been used > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

<b>Matcher error</b>: Cannot read body text because it has already been used.
`;

exports[`toHaveBodyText > fails when the received value is not a Response or Request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

<b>Matcher error</b>: Received value is not a Request or Response.
`;

exports[`toHaveBodyText > fails when the response/request does not have the expected body text > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

Expected request to have body text <g>Hello, world!</g>, but it was <r>Goodbye, world!</g>.
`;

exports[`toHaveBodyText > fails when the response/request does not have the expected body text > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

Expected response to have body text <g>Hello, world!</g>, but it was <r>Goodbye, world!</g>.
`;

exports[`toHaveBodyText > passes when the response/request has the expected body text > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>not<d>.</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

Expected request not to have body text <g>Hello, world!</g>, but it did.
`;

exports[`toHaveBodyText > passes when the response/request has the expected body text > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>not<d>.</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

Expected response not to have body text <g>Hello, world!</g>, but it did.
`;

exports[`toHaveBodyText > when Request is not defined in the global scope > fails > request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

<b>Matcher error</b>: Request or Response is not defined in the global scope.
`;

exports[`toHaveBodyText > when Response is not defined in the global scope > fails > response 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveBodyText<d>(</b><g>"Hello, world!"</g><d>)</b>

<b>Matcher error</b>: Request or Response is not defined in the global scope.
`;

exports[`toHaveHeader > fails when the expected value is not a string or undefined > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>123</g><d>)</b>

<b>Matcher error</b>: Expected value must be a string or undefined.

value has type:  number
value has value: 123
`;

exports[`toHaveHeader > fails when the expected value is not a string or undefined > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>123</g><d>)</b>

<b>Matcher error</b>: Expected value must be a string or undefined.

value has type:  number
value has value: 123
`;

exports[`toHaveHeader > fails when the header name is not a string > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveHeader<d>(</b><g>123</g><d>, </b><g>"application/json"</g><d>)</b>

<b>Matcher error</b>: Header name must be a string.

name has type:  number
name has value: 123
`;

exports[`toHaveHeader > fails when the header name is not a string > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveHeader<d>(</b><g>123</g><d>, </b><g>"application/json"</g><d>)</b>

<b>Matcher error</b>: Header name must be a string.

name has type:  number
name has value: 123
`;

exports[`toHaveHeader > fails when the received value is not a Response or Request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>"application/json"</g><d>)</b>

<b>Matcher error</b>: Received value is not a Response or Request.
`;

exports[`toHaveHeader > when Request is not defined in the global scope > fails > request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>"application/json"</g><d>)</b>

<b>Matcher error</b>: Response or Request is not defined in the global scope.
`;

exports[`toHaveHeader > when Response is not defined in the global scope > fails > response 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>"application/json"</g><d>)</b>

<b>Matcher error</b>: Response or Request is not defined in the global scope.
`;

exports[`toHaveHeader > when expected value is not provided > fails when the response/request does not have the expected header > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveHeader<d>(</b><g>"Authorization"</g><d>)</b>

Expected request to have header <g>Authorization</g>, but it was not found.
`;

exports[`toHaveHeader > when expected value is not provided > fails when the response/request does not have the expected header > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveHeader<d>(</b><g>"Authorization"</g><d>)</b>

Expected response to have header <g>Authorization</g>, but it was not found.
`;

exports[`toHaveHeader > when expected value is not provided > passes when the response/request has the expected header > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>not<d>.</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>)</b>

Expected request not to have header <g>Content-Type</g>, but it did.
`;

exports[`toHaveHeader > when expected value is not provided > passes when the response/request has the expected header > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>not<d>.</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>)</b>

Expected response not to have header <g>Content-Type</g>, but it did.
`;

exports[`toHaveHeader > when expected value is provided > fails when the response/request does not have the expected header and value > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>"application/json"</g><d>)</b>

Expected request to have header <g>Content-Type</g> with a value of <g>application/json</g>, but it had a value of <r>text/html</g>.
`;

exports[`toHaveHeader > when expected value is provided > fails when the response/request does not have the expected header and value > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>"application/json"</g><d>)</b>

Expected response to have header <g>Content-Type</g> with a value of <g>application/json</g>, but it had a value of <r>text/html</g>.
`;

exports[`toHaveHeader > when expected value is provided > passes when the response/request has the expected header and value > request 1`] = `
<d>expect(</b><r>request</g><d>).</b>not<d>.</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>"application/json"</g><d>)</b>

Expected request not to have header <g>Content-Type</g> with a value of <g>application/json</g>, but it did.
`;

exports[`toHaveHeader > when expected value is provided > passes when the response/request has the expected header and value > response 1`] = `
<d>expect(</b><r>response</g><d>).</b>not<d>.</b>toHaveHeader<d>(</b><g>"Content-Type"</g><d>, </b><g>"application/json"</g><d>)</b>

Expected response not to have header <g>Content-Type</g> with a value of <g>application/json</g>, but it did.
`;

exports[`toHaveMethod > fails when Request is not defined in the global scope 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveMethod<d>(</b><g>"POST"</g><d>)</b>

<b>Matcher error</b>: Request is not defined in the global scope.
`;

exports[`toHaveMethod > fails when the received value is not a Request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveMethod<d>(</b><g>"POST"</g><d>)</b>

<b>Matcher error</b>: Received value is not a Request.
`;

exports[`toHaveMethod > fails when the request does not have the expected method 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveMethod<d>(</b><g>"POST"</g><d>)</b>

Expected request to have method <g>POST</g>, but it was <r>GET</g>.
`;

exports[`toHaveMethod > passes when the request has the expected method 1`] = `
<d>expect(</b><r>request</g><d>).</b>not<d>.</b>toHaveMethod<d>(</b><g>"POST"</g><d>)</b>

Expected request not to have method <g>POST</g>, but it did.
`;

exports[`toHaveStatus > fails when Response is not defined in the global scope 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveStatus<d>(</b><g>200</g><d>)</b>

<b>Matcher error</b>: Response is not defined in the global scope.
`;

exports[`toHaveStatus > fails when the expected status is not a number 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveStatus<d>(</b><g>200</g><d>)</b>

<b>Matcher error</b>: Expected status must be a number.

expectedStatus has type:  string
expectedStatus has value: "200"
`;

exports[`toHaveStatus > fails when the received value is not a Response 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveStatus<d>(</b><g>200</g><d>)</b>

<b>Matcher error</b>: Received value is not a Response.
`;

exports[`toHaveStatus > fails when the response does not have the expected status 1`] = `
<d>expect(</b><r>response</g><d>).</b>toHaveStatus<d>(</b><g>200</g><d>)</b>

Expected response to have status <g>200</g>, but it was <r>404</g>.
`;

exports[`toHaveStatus > passes when the response has the expected status 1`] = `
<d>expect(</b><r>response</g><d>).</b>not<d>.</b>toHaveStatus<d>(</b><g>200</g><d>)</b>

Expected response not to have status <g>200</g>, but it did.
`;

exports[`toHaveURL > fails when Request is not defined in the global scope 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveURL<d>(</b><g>"https://example.com/api"</g><d>)</b>

<b>Matcher error</b>: Request is not defined in the global scope.
`;

exports[`toHaveURL > fails when the received value is not a Request 1`] = `
<d>expect(</b><r>received</g><d>).</b>toHaveURL<d>(</b><g>"https://example.com/api"</g><d>)</b>

<b>Matcher error</b>: Received value is not a Request.
`;

exports[`toHaveURL > fails when the request does not have the expected URL 1`] = `
<d>expect(</b><r>request</g><d>).</b>toHaveURL<d>(</b><g>"https://example.com/api"</g><d>)</b>

Expected request to have URL <g>https://example.com/api</g>, but it was <r>https://example.com/other</g>.
`;

exports[`toHaveURL > passes when the request has the expected URL 1`] = `
<d>expect(</b><r>request</g><d>).</b>not<d>.</b>toHaveURL<d>(</b><g>"https://example.com/api"</g><d>)</b>

Expected request not to have URL <g>https://example.com/api</g>, but it did.
`;
